# unraid-nix

./: .gitignore  BUILD.md  Cargo.toml  README.md  STATUS.md  TODO.md  clippy.toml  nix-helper  nix.plg  rustfmt.toml
.agents/: AGENTS.md
benches/: preset_perf.rs
presets/: actual-budget.json  adguard-home.json  agent-dvr.json  airsonic-advanced.json  anythingllm.json  apprise.json  appwrite.json  archivebox.json  audiobookshelf.json  authelia.json  authentik.json  baserow.json  bazarr.json  bitwarden.json  bookstack.json  borgbackup.json  caddy.json  calibre-web.json  calibre.json  changedetection-io.json  clickhouse.json  cloudbeaver.json  cloudflare-ddns.json  cloudflared.json  code-server.json  comfyui-cuda.json  comfyui-rocm.json  comfyui-vulkan.json  comfyui.json  crowdsec.json  cyberchef.json  dashy.json  ddclient.json  deconz.json  deluge.json  dify.json  discourse.json  dizquetv.json  dokuwiki.json  doplarr.json  (+208 more)
presets_composed/: jellyfin-web.json
presets_to_test/: airsonic-advanced.json  anythingllm.json  bitwarden.json  dashy.json  doplarr.json  emby.json  excalidraw.json  flame.json  flowise.json  focalboard.json  friendica.json  guacamole.json  hoarder.json  homarr.json  humhub.json  jeedom.json  joplin-server.json  kerberos-io.json  kometa.json  kutt.json  leantime.json  lobe-chat.json  nextcloud.json  nginx-proxy-manager.json  portainer.json  requestrr.json  romm.json  scrypted.json  shinobi.json  shlink.json  swag.json  tasmoadmin.json  threadfin.json  wordpress.json  zwavejs2mqtt.json
scripts/: build.sh  event_disks_mounted  event_stopping_svcs  (+7 more)
(+175 files in other folders)
