[package]
name = "nix-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
chrono = "0.4"

# Release profile — strip + LTO cuts the shipped binary from ~4 MB to ~1 MB
# and improves startup. Apply on tag-built releases (see
# .github/workflows/release.yml).
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
