[package]
name = "nix-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3", features = ["json"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
fs2 = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# Release profile — strip + LTO cuts the shipped binary from ~4 MB to ~1 MB
# and improves startup. Apply on tag-built releases (see
# .github/workflows/release.yml).
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bench]]
name = "preset_perf"
harness = false
